Github user name in metadata
It will add GitHub username of utility maintainer inside utility
metadata. This change will make identification of maintainers easier on
GitHub, and those usernames can be used by bots for notifications.

Signed-off-by: Jan Richter <jarichte@redhat.com>

--- a/metadata/autils/archive/ar.yml
+++ b/metadata/autils/archive/ar.yml
@@ -6,6 +6,7 @@ categories:
 maintainers:
   - name: Cleber Rosa
     email: crosa@redhat.com
+    github_usr_name: clebergnu
 supported_platforms:
   - CentOS Stream 9
   - Fedora 36
