Add CI secrets to project workflow
Reference: https://github.com/avocado-framework/avocado-ci-tools/commit/8cdca288c039ee30fcca97e223a577afa494f78f
Signed-off-by: Jan Richter <jarichte@redhat.com>

--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -19,3 +19,6 @@ jobs:
         uses: avocado-framework/avocado-ci-tools@main
         with:
           avocado-project: true
+          bot_app_id: ${{ secrets.MR_AVOCADO_ID }}
+          bot_app_installation_id: ${{ secrets.MR_AVOCADO_INSTALLATION_ID }}
+          bot_app_private_key: ${{ secrets.MR_AVOCADO_PRIVATE_KEY }}
