--- a/.github/workflows/schema-validation.yml
+++ b/.github/workflows/schema-validation.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Validating all libraries against our schema
-        run: python3 tests/validate-schema.py
+        run: python3 tests/validate_schema.py
