--- a/.github/workflows/modules-tests.yml
+++ b/.github/workflows/modules-tests.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Avocado to run tests
-        run: pip3 install avocado-framework==102.0
+        run: pip3 install 'avocado-framework<104.0'
 
       - name: Run the ar module test
         run: ./tests/test-module.py metadata/autils/archive/ar.yml
