--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -42,7 +42,7 @@ jobs:
     - release-test
     runs-on: ubuntu-latest
     environment:
-      name: pypi
+      name: testpypi
       url: https://test.pypi.org/project/autils
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
