--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=64", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "autils"
+name = "aautils"
 dynamic = ["version"]
 requires-python = ">=3.7"
 authors = [
@@ -29,7 +29,7 @@ classifiers = [
 ]
 [project.urls]
 Homepage = "https://avocado-framework.github.io/autils.html"
-Repository = "https://github.com/avocado-framework/autils"
+Repository = "https://github.com/avocado-framework/aautils"
 
 [tool.setuptools]
 packages = ["autils"]
