Reorg module metadata and test directory to avoid namespace clashes
Because some tools, such as pylint, will mimic the import of Python
modules, they can get confused on the test directory structure, and
confuse it with the file containing the module implementation.

For instance, because there is currently:

   autils/archive/ar.py

And:

   tests/autils/archive/ar.py

Pylint may consider the later to be the former.  Because we don't need
the autils component in the tests, and because it's not expected that
this repo will contain anything other than module implementations
under the "autils" component, the simplest solution is to drop
it.

For consistency, this also drops it from the metadata directory.

Signed-off-by: Cleber Rosa <crosa@redhat.com>

--- a/.github/workflows/modules-tests.yml
+++ b/.github/workflows/modules-tests.yml
@@ -15,7 +15,7 @@ jobs:
         run: pip3 install 'avocado-framework<104.0'
 
       - name: Run the ar module test
-        run: ./tests/test_module.py metadata/autils/archive/ar.yml
+        run: ./tests/test_module.py metadata/archive/ar.yml
 
   static-checks:
     runs-on: ubuntu-latest
@@ -25,6 +25,9 @@ jobs:
 
       - name: Install Avocado to allow for lint check on Python code under tests directory
         run: pip3 install 'avocado-framework<104.0'
+
+      - name: Include autils directory from source tree into Python's PATH
+        run: pip3 install .
 
       - name: run static checks
         uses: avocado-framework/avocado-ci-tools@main
@@ -55,5 +58,5 @@ jobs:
 
       - name: Run API stability tests
         if: steps.test_changes.outcome == 'failure'
-        run: ./tests/test_module.py metadata/autils/archive/ar.yml
+        run: ./tests/test_module.py metadata/archive/ar.yml
 
