Upgrade pip before installation in CI
The pip installation of local project via pyproject.toml can have issues
on ubuntu-22.04 which is used by GitHub CI. The pip upgrade should solve
the issue.

Reference: https://github.com/pypa/setuptools/issues/3269
Signed-off-by: Jan Richter <jarichte@redhat.com>

--- a/.github/workflows/modules-tests.yml
+++ b/.github/workflows/modules-tests.yml
@@ -27,7 +27,9 @@ jobs:
         run: pip3 install 'avocado-framework<104.0'
 
       - name: Include autils directory from source tree into Python's PATH
-        run: pip3 install .
+        run: |
+          pip install --upgrade pip
+          pip3 install .
 
       - name: run static checks
         uses: avocado-framework/avocado-ci-tools@main
