--- a/.github/workflows/modules-tests.yml
+++ b/.github/workflows/modules-tests.yml
@@ -12,10 +12,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Avocado to run tests
-        run: pip3 install 'avocado-framework'
+        run: pip3 install 'avocado-framework' coverage
 
       - name: Run the ar module test
-        run: ./tests/test_module.py metadata/archive/ar.yml
+        run: ./tests/test_module.py metadata/archive/ar.yml --coverage
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   static-checks:
     runs-on: ubuntu-latest
