--- a/.github/workflows/modules-tests.yml
+++ b/.github/workflows/modules-tests.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Avocado to run tests
-        run: pip3 install 'avocado-framework<104.0'
+        run: pip3 install 'avocado-framework'
 
       - name: Run the ar module test
         run: ./tests/test_module.py metadata/archive/ar.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Avocado to allow for lint check on Python code under tests directory
-        run: pip3 install 'avocado-framework<104.0'
+        run: pip3 install 'avocado-framework'
 
       - name: Include autils directory from source tree into Python's PATH
         run: |
@@ -56,7 +56,7 @@ jobs:
 
       - name: Install Avocado to run tests
         if: steps.test_changes.outcome == 'failure'
-        run: pip3 install 'avocado-framework<104.0'
+        run: pip3 install 'avocado-framework'
 
       - name: Run API stability tests
         if: steps.test_changes.outcome == 'failure'
