--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,9 +19,7 @@ sphinx:
 # declare the Python requirements required to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
-   install:
-   - requirements: requirements-doc.txt
-   - method: pip
-   - path: .
-        
-
+  install:
+    - requirements: requirements-doc.txt
+    - method: pip
+      path: .
