Matching Name Formatting
Included my middle name to match other modules.

Signed-off-by: Harvey Lynden <hlynden@redhat.com>

--- a/metadata/data_structures.yml
+++ b/metadata/data_structures.yml
@@ -5,7 +5,7 @@ categories:
   - Development
   - Misc
 maintainers:
-  - name: Harvey Lynden
+  - name: Harvey James Lynden
     email: hlynden@redhat.com
     github_usr_name: harvey0100
 supported_platforms:
