Restructure Functional/Unit Tests
Restrucutre of the Autils test directories, preperation for functional
tests being included, change of metadata files for the test runs.

Signed-off-by: Harvey Lynden <hlynden@redhat.com>

--- a/metadata/devel/gdb.yml
+++ b/metadata/devel/gdb.yml
@@ -11,5 +11,5 @@ supported_platforms:
   - Fedora 36
   - Fedora 37
 tests:
-  - tests/modules/devel/gdb.py
+  - tests/unit/modules/devel/gdb.py
 remote: false
