--- a/.github/workflows/modules-tests.yml
+++ b/.github/workflows/modules-tests.yml
@@ -15,7 +15,7 @@ jobs:
         run: pip3 install 'avocado-framework' coverage
 
       - name: Run the all modules tests
-        run: ./tests/test_module.py metadata --coverage
+        run: PYTHONPATH=.:$PYTHONPATH ./tests/test_module.py metadata --coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
@@ -65,5 +65,5 @@ jobs:
 
       - name: Run API stability tests
         if: steps.test_changes.outcome == 'failure'
-        run: ./tests/test_module.py metadata
+        run: PYTHONPATH=.:$PYTHONPATH ./tests/test_module.py metadata
 
